feat(web): refactor configuration files and update layout with Tailwind CSS integration

--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -1,4 +1,6 @@
 @import "tailwindcss";
+@source "../src/";
+
 
 @layer base {
   :root {
@@ -63,13 +65,10 @@
 }
 
 @layer base {
-  * {
+  /* * {
     @reference border-border;
   }
   body {
     @reference font-(--font-inter) antialiased bg-background text-foreground;
-  }
+  } */
 }
-
-
-
