--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -107,6 +107,16 @@
     font-style: bold;
   }
 
+  @font-face {
+    font-family: 'CabinetGrotesk-Variable';
+    src: url('./fonts/CabinetGrotesk-Variable.woff2') format('woff2'),
+         url('./fonts/CabinetGrotesk-Variable.woff') format('woff'),
+         url('./fonts/CabinetGrotesk-Variable.ttf') format('truetype');
+    font-weight: 100 900;
+    font-display: swap;
+    font-style: normal;
+  }
+
   .container {
     @apply max-w-[90vh] mx-auto px-4;
   }
