--- a/apps/web/src/assets/globals.css
+++ b/apps/web/src/assets/globals.css
@@ -111,8 +111,8 @@
   @font-face {
     font-family: 'CabinetGrotesk-Variable';
     src: url('./fonts/CabinetGrotesk-Variable.woff2') format('woff2'),
-         url('./fonts/CabinetGrotesk-Variable.woff') format('woff'),
-         url('./fonts/CabinetGrotesk-Variable.ttf') format('truetype');
+      url('./fonts/CabinetGrotesk-Variable.woff') format('woff'),
+      url('./fonts/CabinetGrotesk-Variable.ttf') format('truetype');
     font-weight: 100 900;
     font-display: swap;
     font-style: normal;
@@ -173,5 +173,18 @@
 
   body {
     @apply bg-background text-foreground;
+  }
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
   }
 }
